src/objects/Resource__c.object
<CustomObject>
    <description>Contacts related to Account Plan</description>
    <fields>
        <fullName>Account_operation_area__c</fullName>
        <label>Account operation area</label>
        <picklist>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tactical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Acct_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acct Plan</label>
        <referenceTo>SFDC_Acct_Plan__c</referenceTo>
        <relationshipName>Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attitude__c</fullName>
        <label>Attitude</label>
        <picklist>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_area__c</fullName>
        <label>Business area</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <label>Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Person_knowledge__c</fullName>
        <label>Person knowledge</label>
        <picklist>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role_in_decision_process__c</fullName>
        <label>Role in decision process</label>
        <picklist>
            <picklistValues>
                <fullName>Decision maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gatekeeper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initiative taker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Typology__c</fullName>
        <label>Typology</label>
        <picklist>
            <picklistValues>
                <fullName>Enthusiast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practitioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diplomat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyst</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Account Plan - Contact</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan - Contacts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>